Allow editor modifier keys to bleed through, fix the button z-index from overlapping the modal.

--- a/public/styles/cell-controls.styl
+++ b/public/styles/cell-controls.styl
@@ -62,7 +62,7 @@
   color: $color-cell-controls-keycode
 
 .btn-show-cell-controls
-  z-index: 200
+  z-index: 10
   position: absolute
   top: -1px
   right: -1px
